# DermSynth3D_dev

./: .gitattributes  .gitignore  Dockerfile_webapp  README.md  app.py  gradio_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-lint.yml  python-publish.yml
.github/workflows/cuda/: Windows-env.sh  Windows.sh
dermsynth3d/: __init__.py  version.py
dermsynth3d/datasets/: __init__.py  datasets.py
dermsynth3d/deepblend/: __init__.py  blend.py  blend3d.py  utils.py
dermsynth3d/losses/: __init__.py  deepblend_loss.py  seg_loss.py
dermsynth3d/models/: __init__.py  inference.py  model.py
dermsynth3d/tools/: __init__.py  blend_lesions.py  generate2d.py  renderer.py  select_location.py  synthesize.py
dermsynth3d/utils/: __init__.py  augment.py  evaluate.py  evaluate_detection.py  filestruct.py  image.py  tensor.py  textures.py  utils.py
dermsynth3d/utils/object_detection_metrics/: BoundingBox.py  BoundingBoxes.py  Evaluator.py
notebooks/: blend3d.ipynb  generate_2dviews.ipynb  inference_detection.ipynb  inference_multitask.ipynb  inference_multitask_extended.ipynb  inference_segmentation.ipynb  paste_lesions.ipynb  train_detection.ipynb  train_segmentation.ipynb
scripts/: gen_data.py  infer_multi_task.py  inference.py  train_mix_seg.py
webapp/: Dockerfile  main.py  pyproject.toml  requirements.txt  vercel.json
webapp/api/: main.py  rendering.py
webapp/static/: index.html  main.js  style.css
