[project]
name = "dermsynth3d-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations>=2.0.8",
    "gradio>=4.44.1",
    "ipython>=8.18.1",
    "opencv-python>=4.12.0.88",
    "pytorch3d",
    "rtree>=1.4.1",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "trimesh>=4.10.0",
]

[tool.uv.workspace]
members = [
    "DermSynth3D-WebApp",
]

[tool.uv.sources]
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git", rev = "stable" }
