[project]
name = "dermsynth3d-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.123.8",
    "gdown>=5.2.0",
    "matplotlib>=3.9.4",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pytorch3d",
    "rtree>=1.4.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "trimesh>=4.10.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]

[tool.uv.extra-build-dependencies]
pytorch3d = ["torch"]

[tool.uv.sources]
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git", rev = "stable" }
