[project]
name = "dermsynth3d-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "albumentations>=2.0.8",
    "cmake>=4.2.0",
    "fastapi[standard]>=0.123.8",
    "gdown>=5.2.0",
    "httpx>=0.28.1",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "ninja>=1.13.0",
    "nupy>=0.1.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=10.4.0",
    "python-multipart>=0.0.20",
    "pytorch3d",
    "rtree>=1.4.1",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.6.1",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "trimesh>=4.10.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d.git", rev = "stable" }
